--- a/AIML-Intro/Unit 02/search.ipynb
+++ b/AIML-Intro/Unit 02/search.ipynb
@@ -101,6 +101,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BFS:  ['s', 'a', 'b', 'x', 'y', 'z', 'g']\n",
+      "DFS:  ['s', 'b', 'y', 'g', 'a', 'z', 'x']\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph = {\n",
+    "    's': ['a', 'b'],\n",
+    "    'a': ['x', 'y', 'z'],\n",
+    "    'b': ['y'],\n",
+    "    'x': [],\n",
+    "    'y': ['g'],\n",
+    "    'z': [],\n",
+    "    'g': []\n",
+    "\n",
+    "}\n",
+    "start = 's'\n",
+    "\n",
+    "print(\"BFS: \", BFS.BFS(graph, start))\n",
+    "print(\"DFS: \", DFS.DFS(graph, start))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
